<resources> //strings 1
    <string name="app_name">Online Reservation</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset">RESET</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-smoking</string>
    <string name="size_of_group">Size of group:</string>
    <string name="mobile_number">Mobile Number:</string>
</resources>